--- a/package.json
+++ b/package.json
@@ -13,11 +13,13 @@
     "debug": "~2.6.9",
     "express": "~4.16.0",
     "express-session": "^1.15.6",
+    "formidable": "^1.2.1",
     "http-errors": "~1.6.2",
     "jade": "~1.11.0",
     "joi": "^14.3.1",
     "mongoose": "^5.4.17",
     "morgan": "^1.9.1",
+    "multer": "^1.4.1",
     "nodemon": "^1.18.10",
     "passport": "^0.4.0",
     "passport-http": "^0.3.0",
